hydroflow/tests/snapshots/surface_loop__flo_nested@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_loop.rs
expression: "df.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([&quot;alice&quot;, &quot;bob&quot;])</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(iter_batches_stream(0..12, 3))</code>"/]:::pullClass
3v1[\"(3v1) <code>batch()</code>"/]:::pullClass
4v1[\"(4v1) <code>flatten()</code>"/]:::pullClass
5v1[\"(5v1) <code>batch()</code>"/]:::pullClass
6v1[\"(6v1) <code>flatten()</code>"/]:::pullClass
7v1[\"(7v1) <code>cross_join::&lt;'static, 'tick&gt;()</code>"/]:::pullClass
8v1[\"(8v1) <code>all_once()</code>"/]:::pullClass
9v1[\"(9v1) <code>map(|vec| (context.current_tick().0, vec))</code>"/]:::pullClass
10v1[/"<div style=text-align:center>(10v1)</div> <code>assert_eq([<br>    (<br>        0,<br>        vec![<br>            (&quot;alice&quot;, 0),<br>            (&quot;alice&quot;, 1),<br>            (&quot;alice&quot;, 2),<br>            (&quot;bob&quot;, 0),<br>            (&quot;bob&quot;, 1),<br>            (&quot;bob&quot;, 2),<br>        ],<br>    ),<br>    (<br>        1,<br>        vec![<br>            (&quot;alice&quot;, 3),<br>            (&quot;alice&quot;, 4),<br>            (&quot;alice&quot;, 5),<br>            (&quot;bob&quot;, 3),<br>            (&quot;bob&quot;, 4),<br>            (&quot;bob&quot;, 5),<br>        ],<br>    ),<br>    (<br>        2,<br>        vec![<br>            (&quot;alice&quot;, 6),<br>            (&quot;alice&quot;, 7),<br>            (&quot;alice&quot;, 8),<br>            (&quot;bob&quot;, 6),<br>            (&quot;bob&quot;, 7),<br>            (&quot;bob&quot;, 8),<br>        ],<br>    ),<br>    (<br>        3,<br>        vec![<br>            (&quot;alice&quot;, 9),<br>            (&quot;alice&quot;, 10),<br>            (&quot;alice&quot;, 11),<br>            (&quot;bob&quot;, 9),<br>            (&quot;bob&quot;, 10),<br>            (&quot;bob&quot;, 11),<br>        ],<br>    ),<br>])</code>"\]:::pushClass
11v1["(11v1) <code>handoff</code>"]:::otherClass
12v1["(12v1) <code>handoff</code>"]:::otherClass
13v1["(13v1) <code>handoff</code>"]:::otherClass
4v1-->|0|7v1
3v1-->4v1
1v1-->11v1
6v1-->|1|7v1
5v1-->6v1
2v1-->12v1
9v1-->10v1
8v1-->9v1
7v1-->13v1
11v1-->3v1
12v1-->5v1
13v1-->8v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    subgraph sg_1v1_var_users ["var <tt>users</tt>"]
        1v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    2v1
    subgraph sg_2v1_var_messages ["var <tt>messages</tt>"]
        2v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    3v1
    4v1
    5v1
    6v1
    7v1
    subgraph sg_3v1_var_cp ["var <tt>cp</tt>"]
        7v1
    end
end
subgraph sg_4v1 ["sg_4v1 stratum 0"]
    8v1
    9v1
    10v1
end
