hydroflow/tests/snapshots/surface_loop__flo_repeat_n_nested@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_loop.rs
expression: "df.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([&quot;alice&quot;, &quot;bob&quot;])</code>"/]:::pullClass
2v1[\"(2v1) <code>batch()</code>"/]:::pullClass
3v1[\"(3v1) <code>flatten()</code>"/]:::pullClass
4v1[\"(4v1) <code>repeat_n(3)</code>"/]:::pullClass
5v1[\"(5v1) <code>flatten()</code>"/]:::pullClass
6v1[\"(6v1) <code>repeat_n(3)</code>"/]:::pullClass
7v1[\"(7v1) <code>enumerate()</code>"/]:::pullClass
8v1[\"(8v1) <code>inspect(|x| println!(&quot;{:?}&quot;, x))</code>"/]:::pullClass
9v1[/"<div style=text-align:center>(9v1)</div> <code>assert_eq([<br>    (0, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (1, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (2, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (3, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (4, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (5, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (6, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (7, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>    (8, vec![&quot;alice&quot;, &quot;bob&quot;]),<br>])</code>"\]:::pushClass
10v1["(10v1) <code>handoff</code>"]:::otherClass
11v1["(11v1) <code>handoff</code>"]:::otherClass
12v1["(12v1) <code>handoff</code>"]:::otherClass
13v1["(13v1) <code>handoff</code>"]:::otherClass
14v1["(14v1) <code>handoff</code>"]:::otherClass
2v1-->10v1
1v1-->11v1
4v1-->12v1
3v1-->13v1
8v1-->9v1
7v1-->8v1
6v1-->7v1
5v1-->14v1
10v1-->3v1
11v1-->2v1
12v1-->5v1
13v1-->4v1
14v1-->6v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    subgraph sg_1v1_var_usrs1 ["var <tt>usrs1</tt>"]
        1v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    2v1
    subgraph sg_2v1_var_usrs2 ["var <tt>usrs2</tt>"]
        2v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    3v1
    subgraph sg_3v1_var_usrs2 ["var <tt>usrs2</tt>"]
        3v1
    end
end
subgraph sg_4v1 ["sg_4v1 stratum 0"]
    4v1
    subgraph sg_4v1_var_usrs3 ["var <tt>usrs3</tt>"]
        4v1
    end
end
subgraph sg_5v1 ["sg_5v1 stratum 0"]
    5v1
    subgraph sg_5v1_var_usrs3 ["var <tt>usrs3</tt>"]
        5v1
    end
end
subgraph sg_6v1 ["sg_6v1 stratum 0"]
    6v1
    7v1
    8v1
    9v1
end
